2007-07-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunidecomp.c:
	* glib/gregex.c:
	* glib/gstring.c: Various doc cleanups.

2007-07-20  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
	Add goffset type (64bit file size)
	Add G_MAXSSIZE and G_MINSSIZE

2007-07-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Fix the build.

2007-07-19  Behdad Esfahbod  <behdad@gnome.org>

	* glib/glib.symbols:
	* glib/gunicode.h:
	* glib/gunicodeprivate.h:
	* glib/gunidecomp.c (g_unichar_combining_class):
	* glib/guniprop.c (has_more_above):
	Make g_unichar_combining_class() public. (#453998)

Fri Jul 13 01:01:46 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.[hc]: more atomic ops pointer cast fixes. this time it'll
	work with atomic op macros *and* atomic op functions.

Fri Jul 13 00:50:40 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.[hc]: fixed missing pointer casts when using atomic ops.

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.7 ===

	* NEWS: Updates

Thu Jul 12 17:31:08 2007  Tim Janik  <timj@imendio.com>

	* tests/slice-concurrent.c: beautified output somewhat. fixed long
	sleeps by reducing sleep accumulating and using randomized re-scheduling
	(which works on UP and SMP). increased possible blocksizes.

Thu Jul 12 17:26:05 2007  Tim Janik  <timj@imendio.com>

	* tests/slice-concurrent.c: added GSLice test from Stefan Westerfeld,
	bug #433314.

Thu Jul 12 15:46:40 2007  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: migrate per-thread magazine caches from single-thread
	scenario to first thread using GSlice after g_thread_init(); based on
	a patch by Tor Lillqvist, fixes #331853.
	removed warning about g_thread_init() being called after other glib
	functions (in particular g_slice* calls), because GSlice can cope
	with this now and the rest of glib is believed to cope as well.

	* tests/slice-threadinit.c: new test program which tests GSlice working